@@ -1,9 +1,9 @@
-# Copyright 2007-2008 Gentoo Foundation
+# Copyright 2007-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
 PN = gentoo-syntax
-PV = $(shell sed '/^[ \t]*\* .*[Vv]ersion/!d;s/[^0-9.]*\([0-9.]*\).*/\1/;q' \
-	ChangeLog)
+PV = $(shell sed '/^;.*[Vv]ersion/!d;s/[^0-9.]*\([^ \t]*\).*/\1/;q' \
+	gentoo-syntax.el)
 P = $(PN)-$(PV)
 
 DISTFILES = gentoo-syntax.el ebuild-mode-keywords.el \
